# aegis_omni_xeon

./: .gitignore  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  aegis_brain.py  aegis_chat.py  aegis_daemon.py  aegis_omni.py  aegis_real.py  aegis_studio.py  aegis_unified.py  install_service.sh  merge_autonomous_system.sh  pyproject.toml  requirements.txt  run.sh  run_real.sh  run_real_all.sh  run_ubuntu_fixed.sh  run_unified.sh  run_unified_all.sh  test_ubuntu_fixed.sh  upgrade_real_system.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
modules/: __init__.py  api_server.py  forensics.py  honeypot.py  ioc_scanner.py  log_analyzer.py  password_audit.py  payload_detector.py  uptime_monitor.py  vuln_scanner.py
sovereign-ai/: package-lock.json  package.json
sovereign-ai/core/: system.js
sovereign-ai/economic/: economic.js
sovereign-ai/matrix/: agents.js
sovereign-ai/vector/: memory.js
