[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aegis-omni-xeon"
version = "1.0.0"
description = "Autonomous Security Monitoring & Threat Intelligence Platform"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Jorge Francisco Paredes", email = "IRSTAXBYJORGE@GMAIL.COM"},
]
keywords = ["security", "monitoring", "threat-detection", "network-analysis", "forensics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy",
    "scikit-learn",
    "rich",
    "psutil",
    "cryptography",
]

[project.urls]
Homepage = "https://github.com/irstabyjorge/aegis_omni_xeon"
Repository = "https://github.com/irstabyjorge/aegis_omni_xeon"
Issues = "https://github.com/irstabyjorge/aegis_omni_xeon/issues"
Sponsor = "https://github.com/sponsors/irstabyjorge"

[project.scripts]
aegis = "aegis_unified:main"
aegis-sim = "aegis_omni:main"
aegis-real = "aegis_real:main"
